--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ section .title::after{
     margin-bottom: 20px;
     margin-left: 10px;
     width: 560px;
-    height: 450px;
+    height: 250px;
     background: #222;
     text-align: center;
     border-radius: 100px;
@@ -569,6 +569,7 @@ section .title::after{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
+    color: #fff;
 }
 
 
