--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ html{
 
 .home{
     display: flex;
-    background: url("images/bunny.jpg") no-repeat center;
+    background: url("images/Website_banner\ \(3\).jpg") no-repeat center, gray;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -256,7 +256,7 @@ section .title::after{
 
 .about .about-content .left img{
 
-    height: 400px;
+    height: 450px;
     width: 400px;
     object-fit: cover;
     border-radius: 6px;
