--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ html{
 
 .home{
     display: flex;
-    background: url("images/bunny.jpg") no-repeat center;
+    background: url("images/Website_banner\ \(3\).jpg") no-repeat center, gray;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -256,7 +256,7 @@ section .title::after{
 
 .about .about-content .left img{
 
-    height: 400px;
+    height: 450px;
     width: 400px;
     object-fit: cover;
     border-radius: 6px;
@@ -524,7 +524,7 @@ section .title::after{
     margin-bottom: 20px;
     margin-left: 10px;
     width: 560px;
-    height: 450px;
+    height: 250px;
     background: #222;
     text-align: center;
     border-radius: 100px;
@@ -569,6 +569,7 @@ section .title::after{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
+    color: #fff;
 }
 
 
